modules/network/network.tf
resource "aws_vpc" "kube_vpc" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "kube_subnet" {
  vpc_id                  = aws_vpc.kube_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.kube_vpc.id
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.kube_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
}

resource "aws_route_table_association" "public_assoc" {
  subnet_id      = aws_subnet.kube_subnet.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_subnet" "private_subnet" {
  vpc_id            = aws_vpc.kube_vpc.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-east-1a"

  map_public_ip_on_launch = false
}
